<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp"
    tools:context=".DevMenuMainView">

    <Button
        android:id="@+id/env_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/env_button_title"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/device_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_button_title"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/logs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logs_button_title"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/file_issue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_issue_button_title"
        android:textAllCaps="false" />

</LinearLayout>