<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.

   Licensed under the Apache License, Version 2.0 (the "License").
   You may not use this file except in compliance with the License.
   A copy of the License is located at

    http://aws.amazon.com/apache2.0

   or in the "license" file accompanying this file. This file is distributed
   on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    tools:context="com.amplifyframework.devmenu.DevMenuFileIssueFragment">

    <EditText
        android:id="@+id/issue_description"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:autofillHints="no"
        android:hint="@string/file_issue_hint"
        android:inputType="textMultiLine"
        android:layout_above="@+id/env_info_switch"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/env_info_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/env_switch_text"
        android:layout_above="@+id/device_info_switch"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textOff="@string/empty"
        android:textOn="@string/empty"
        android:theme="@style/SwitchStyle" />

    <Switch
        android:id="@+id/device_info_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logs_switch"
        android:text="@string/device_switch_text"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textOff="@string/empty"
        android:textOn="@string/empty"
        android:theme="@style/SwitchStyle" />

    <Switch
        android:id="@+id/logs_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/file_issue"
        android:text="@string/logs_switch_text"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textOff="@string/empty"
        android:textOn="@string/empty"
        android:theme="@style/SwitchStyle" />

    <Button
        android:id="@+id/file_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_issue_button_title"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>